fix page jumping on stack context switch
on smaller screens when navbar is visible, clicking the theme switcher or the send email button would cause the page to shift because the navbar would show/hide

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,18 +3,8 @@
 @tailwind utilities;
 @import url('styles/themes.css');
 
-html,
 body {
-  margin: 0;
-  padding: 0;
   min-height: 100vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  box-sizing: border-box;
-
   background-color: hsl(var(--background));
   color: hsl(var(--foreground));
 }
